# pythonanywhere-3-months

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: keep_alive.yml  python-app.yml  run-task.yml
pythonanywhere_3_months/: __init__.py  __main__.py  browsers.py  cli.py  config.py  core.py  helpers.py  last_run.py  selectors.py  startup.py
tests/: conftest.py  test_browser.py  test_login.py  test_page.py
