[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pythonanywhere-3-months-pw"
version = "0.2.1"
authors = [
    {name = "lydiazly"},
]
description = "A Playwright version of pythonanywhere-3-months."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Unlicense"
dependencies = [
    "PyYaml>=6.0.0",
    "pytest-playwright>=0.7.0",
]

[project.scripts]
pythonanywhere_3_months = "pythonanywhere_3_months.__main__:main"
pythonanywhere_check_since = "pythonanywhere_3_months.last_run:check"

[tool.hatch.build.targets.wheel]
packages = ["pythonanywhere_3_months"]
