[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pythonanywhere-3-months-pw"
version = "0.3.1"
authors = [{ name = "Lydia Zhang" }]
description = "A Playwright version of pythonanywhere-3-months - extend the expiry date of your webapp."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "PyYaml>=6.0.0",
    "pytest-playwright>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[project.scripts]
pythonanywhere_3_months = "pythonanywhere_3_months.cli:main"
pythonanywhere_check_since = "pythonanywhere_3_months.last_run:check"

[project.urls]
"Homepage" = "https://github.com/lydiazly/pythonanywhere-3-months"
"Bug Tracker" = "https://github.com/lydiazly/pythonanywhere-3-months/issues"

[tool.hatch.build.targets.wheel]
packages = ["pythonanywhere_3_months"]

[tool.pytest.ini_options]
addopts = "--browser-channel chromium"
testpaths = ["tests"]

[tool.ruff]
include = ["*.py"]
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "ANN", "C901", "Q"]
# select = ["E", "F", "I", "B", "W", "ANN", "Q"]
ignore = ["I001", "Q000", "Q001"]
exclude = ["generated"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "preserve"
